--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="apna.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -41,6 +41,6 @@
         </section>
       </section>  
     </main>
-    <script src="apna.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
