--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
@@ -17,9 +17,8 @@
     </header>
 
     <main>
-      <section class="tasklist">
+      <section class="task-list">
         <section class="task-list">
-          <h2></h2>
     
           <div id="tasks">
     
